<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <POU Name="F_HV_ILK" Id="{8bbc480b-4b4b-4818-b615-4f030274ba2f}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION F_HV_ILK : BOOL
VAR_INPUT
	IG	:	ST_VG; // Gauge used for interlocking the high voltage supply 
	HV	:	ST_HV; // Structure representing HV control
END_VAR
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[F_HV_ILK := ((IG.xPRESS_OK = TRUE)
			AND (IG.rPRESS < HV.rPRO_SP));]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>